--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 :root {
     --clr-pri: rgb(117, 47, 15);
     --clr-pri-light: rgb(153, 72, 35);
-    --clr-sec: rgb(255, 238, 0);
+    --clr-sec: rgb(255, 217, 0);
     --shelf-height: 17rem;
     --book-height: 15rem;
     --book-gap: 1rem;
@@ -42,10 +42,83 @@ header {
 }
 /*--HEADER END--*/
 
-/*--BOOKSHELF START--*/
-.bookshelf-container {
-
+/*--NEW BOOK FORM START--*/
+.form-container {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0,0,0,.3);
 }
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
+    padding: 3rem 5rem;
+    font-size: 2rem;
+    border: 1rem solid white;
+    border-radius: .5rem;
+    background: var(--clr-sec);
+}
+.form-heading {
+    margin-bottom: .5rem;
+}
+.form-group {
+    font-family: sans-serif;
+}
+.form-group-vertical {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: .5rem;
+}
+.form-label {
+    font-size: .9em;
+}
+.form-input {
+    padding: .5rem;
+    font-size: 1em;
+}
+input[type="number"] {
+   
+}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none; 
+    margin: 0; 
+}
+input[type="submit"] {
+    width: 75%;
+    margin-top: 1rem;
+    padding: 1.2rem;
+    font-size: 1em;
+}
+.form-group-horizontal {
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+}
+#page-count-group {
+    justify-content: space-between;
+}
+form input[type="checkbox"] {
+    width: 1.8rem;
+    height: 1.8rem;
+    margin-left: .65rem;
+}
+
+.invisible {
+    display: none;
+}
+
+/*--NEW BOOK FORM END--*/
+
+/*--BOOKSHELF START--*/
 .shelves {
     display: flex;
     align-items: flex-end;
