--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ header {
     justify-content: center;
     align-items: center;
     background: rgba(0,0,0,.3);
+    transition: all .2s;
 }
 form {
     display: flex;
@@ -84,9 +85,6 @@ form {
     padding: .5rem;
     font-size: 1em;
 }
-input[type="number"] {
-   
-}
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
     -webkit-appearance: none; 
@@ -113,9 +111,9 @@ form input[type="checkbox"] {
 }
 
 .invisible {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
 }
-
 /*--NEW BOOK FORM END--*/
 
 /*--BOOKSHELF START--*/
