--- a/styles/style.css
+++ b/styles/style.css
@@ -90,7 +90,7 @@ input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none; 
     margin: 0; 
 }
-input[type="submit"] {
+button[type="submit"] {
     width: 75%;
     margin-top: 1rem;
     padding: 1.2rem;
