--- a/styles/style.css
+++ b/styles/style.css
@@ -90,12 +90,6 @@ input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none; 
     margin: 0; 
 }
-button[type="submit"] {
-    width: 75%;
-    margin-top: 1rem;
-    padding: 1.2rem;
-    font-size: 1em;
-}
 .form-group-horizontal {
     display: flex;
     align-items: center;
@@ -108,6 +102,12 @@ form input[type="checkbox"] {
     width: 1.8rem;
     height: 1.8rem;
     margin-left: .65rem;
+}
+button[type="submit"] {
+    width: 75%;
+    margin-top: 1rem;
+    padding: 1.2rem;
+    font-size: 1em;
 }
 
 .invisible {
@@ -162,3 +162,27 @@ form input[type="checkbox"] {
     background: red;
 }
 /*--BOOK END--*/
+
+/*--BOOK CONTROLS START--*/
+.book-controls {
+    position: relative;
+    bottom: 0;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 3rem;
+    background: purple;
+}
+.book:hover .book-controls {
+    opacity: 100;
+    background: pink;
+}
+.read-toggle {
+    width: 2rem;
+    height: 2rem;
+}
+.read-toggle:checked {
+
+}
+/*--BOOK CONTROLS END--*/
