--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
     --clr-pri-light: rgb(153, 72, 35);
     --clr-sec: rgb(255, 217, 0);
     --clr-sec-nums: 255,217,0;
+    --clr-sec-dark: rgb(235, 199, 0);
     --shelf-height: 17rem;
     --book-height: 15rem;
     --book-gap: 1rem;
@@ -40,6 +41,9 @@ header {
     font-size: 2rem;
     border: none;
     border-radius: .3rem;
+}
+.header-btn:hover {
+    background: var(--clr-sec-dark);
 }
 /*--HEADER END--*/
 
@@ -172,27 +176,42 @@ button[type="submit"] {
 .book-controls {
     position: absolute;
     bottom: 0;
-    opacity: 0;
     display: flex;
+    justify-content: center;
     align-items: center;
+    gap: 20%;
     width: 100%;
     height: 3rem;
+    text-align: center;
+    opacity: 0;
 }
 .book:hover .book-controls {
     opacity: 1;
-    background: rgba(var(--clr-sec-nums), .75);
+    background: rgba(var(--clr-sec-nums), .8);
     border-radius: .5rem;
 }
 .read-toggle {
-    visibility: hidden;
+    display: none;
 }
 .read-toggle-icon {
-    text-align: center;
-    color: grey;
+    width: 2.3rem;
+    color: white;
     /* this makes the icon unselectable */
     user-select: none;
 }
-.read-toggle-icon-checked {
+.read-toggle-icon:hover {
+    color: darkgrey;
+}
+.read-toggle-icon-checked,
+.read-toggle-icon-checked:hover {
+    color: greenyellow;
+}
+.delete-icon {
+    width: 2.2rem;
     color: white;
+    user-select: none;
+}
+.delete-icon:hover {
+    color: red;
 }
 /*--BOOK CONTROLS END--*/
