--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,13 @@
     --clr-pri-nums: 77,31,10;
     --clr-pri-light: rgb(117,47,15);
     --clr-pri-light-nums: 117,47,15;
-    --clr-sec: rgb(255, 204, 20);
-    --clr-sec-nums: 255,204,20;
-    --clr-sec-dark: rgb(233, 159, 0);
-    --clr-sec-light: rgb(255, 239, 151);
+    --clr-pri-dark: rgb(56, 23, 7);
+    --clr-sec-nums: 34,128,56;
+    --clr-sec: rgb(var(--clr-sec-nums));
+    --clr-sec-dark-nums: 17,64,28;
+    --clr-sec-dark: rgb(17, 64, 28);
+    --clr-sec-light: rgb(52,191,84);
+    --clr-white: rgb(230, 230, 230);
     --shelf-height: 17rem;
     --book-height: 15rem;
     --book-gap: 1rem;
@@ -34,7 +37,7 @@ header {
 .site-title {
     font-family: 'Times New Roman', Times, serif;
     font-size: 5rem;
-    color: var(--clr-pri);
+    color: var(--clr-white);
 }
 .btns-container {
     display: flex;
@@ -45,11 +48,14 @@ header {
     font-size: 2rem;
     border: none;
     border-radius: .3rem;
-    color: white;
+    color: var(--clr-white);
     background: var(--clr-pri);
 }
 .header-btn:hover {
-    background: var(--clr-sec-dark);
+    background: var(--clr-pri-dark);
+}
+.header-btn:active {
+    background: var(--clr-pri-light);
 }
 .sort-container {
     display: flex;
@@ -57,25 +63,45 @@ header {
     gap: 1rem;
 }
 .sort-label {
+    display: flex;
+    align-items: center;
+    margin-right: -.7rem;
     font-size: 2rem;
-    color: var(--clr-pri);
+    color: var(--clr-white);
+}
+#sort-label-icon {
+    font-size: 2rem;
 }
 .sort-btn {
     padding: .5rem;
     font-size: 1.7rem;
     color: white;
-    background: var(--clr-pri);
-    border: none;
+    background: var(--clr-sec-dark);
+    border: .15rem solid var(--clr-sec-dark);
     border-radius: .3rem;
 }
 .sort-btn-unselected {
-    color: var(--clr-pri);
     background: transparent;
-    border: .2rem solid var(--clr-pri);
+    border: .15rem solid var(--clr-white);
 }
 .sort-btn-unselected:hover {
     background: rgba(22, 22, 22, .2);
-    background: var(--clr-sec-dark);
+}
+#clear-shelves-button {
+    width: 14rem;
+    margin-left: 1rem;
+    padding: 0;
+    background: transparent;
+    border-bottom: .3rem solid var(--clr-white);
+    border-radius: 0;
+}
+#clear-shelves-button:hover {
+    color: pink;
+    border-bottom-color: pink;
+}
+#clear-shelves-button:active {
+    color: rgb(209, 93, 93);
+    border-bottom-color: rgb(209, 93, 93);
 }
 /*--HEADER END--*/
 
@@ -90,7 +116,7 @@ header {
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    background: rgba(0,0,0,.3);
+    background: rgba(0,0,0,.5);
     transition: all .2s;
 }
 form {
@@ -100,7 +126,8 @@ form {
     gap: 2rem;
     padding: 3rem 5rem;
     font-size: 2rem;
-    border: 1rem solid white;
+    color: var(--clr-white);
+    border: 1rem solid var(--clr-white);
     border-radius: .5rem;
     background: var(--clr-sec);
 }
@@ -118,6 +145,11 @@ form {
 }
 .form-label {
     font-size: .9em;
+}
+input {
+    border: .3rem solid var(--clr-pri);
+    border-radius: .2rem;
+    background: var(--clr-white);
 }
 .form-input {
     padding: .5rem;
@@ -140,14 +172,25 @@ form input[type="checkbox"] {
     width: 1.8rem;
     height: 1.8rem;
     margin-left: .65rem;
+    border: .3rem solid var(--clr-pri);
+
 }
 button[type="submit"] {
     width: 75%;
     margin-top: 1rem;
     padding: 1.2rem;
     font-size: 1em;
+    color: var(--clr-white);
+    background: var(--clr-pri);
+    border: none;
+    border-radius: .2rem;
 }
-
+button[type="submit"]:hover {
+    background: var(--clr-pri-dark);
+}
+button[type="submit"]:active {
+    background: var(--clr-pri-light);
+}
 .invisible {
     visibility: hidden;
     opacity: 0;
@@ -163,7 +206,6 @@ button[type="submit"] {
     padding: 0 2rem;
     gap: var(--book-gap);
     background: linear-gradient(to bottom, black, var(--clr-pri) 45%);
-    border-bottom: .8rem solid var(--clr-pri-light);
 }
 /*--BOOKSHELF END--*/
 
@@ -180,6 +222,7 @@ button[type="submit"] {
     justify-content: center;
     align-items: center;
     text-align: center;
+    border: .2rem solid transparent;
     border-radius: .5rem;
     background: linear-gradient(to right, var(--clr-book-dark), var(--clr-book-light) 35%, var(--clr-book-light) 65%, var(--clr-book-dark));
     transition: background-color .1s;
@@ -223,14 +266,14 @@ button[type="submit"] {
 }
 .book:hover .book-controls {
     opacity: 1;
-    background: rgba(var(--clr-sec-nums), .9);
+    background: rgba(var(--clr-sec-dark-nums), .9);
     border-radius: .5rem;
 }
 .read-toggle {
     display: none;
 }
 .read-toggle-icon {
-    color: white;
+    color: var(--clr-white);
     /* this makes the icon unselectable */
     user-select: none;
 }
@@ -242,7 +285,7 @@ button[type="submit"] {
     color: rgb(27, 204, 42);
 }
 .delete-icon {
-    color: white;
+    color: var(--clr-white);
     user-select: none;
 }
 .delete-icon:hover {
