--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@ header {
 }
 .btns-container {
     display: flex;
+    align-items: center;
     gap: 1rem;
 }
 .header-btn {
@@ -89,6 +90,7 @@ header {
 }
 #clear-shelves-button {
     width: 11rem;
+    height: 3rem;
     margin-left: 1rem;
     padding: 0;
     font-size: 1.7rem;
@@ -212,7 +214,7 @@ button[type="submit"]:active {
 
 /*--BOOK START--*/
 .book {
-    --clr-book-light: rgb(204,41,57);
+    --clr-book-light: rgb(187, 43, 58);
     --clr-book-dark: rgb(128,25,26);
     position: relative;
     min-width: 4.75rem;
@@ -225,20 +227,25 @@ button[type="submit"]:active {
     text-align: center;
     border: .2rem solid transparent;
     border-radius: .5rem;
-    background: linear-gradient(to right, var(--clr-book-dark), var(--clr-book-light) 35%, var(--clr-book-light) 65%, var(--clr-book-dark));
+    background: linear-gradient(to right, var(--clr-book-dark), var(--clr-book-light) 40%, var(--clr-book-light) 60%, var(--clr-book-dark));
     transition: background-color .1s;
 }
-.book:hover {
+.book:hover,
+.book:active {
     border: .2rem solid var(--clr-sec);
 }
 .title {
+    padding: .2rem;
     font-size: 2rem;
 }
 .title-underline {
     width: 75%;
-    margin: .8rem 0 1.5rem 0;
-    border: 1px solid pink;
-    border-radius: .5rem;
+    height: .7rem;
+    margin: .8rem 0 1.3rem 0;
+    border: .1rem solid pink;
+    border-left: none;
+    border-right: none;
+    border-radius: .15rem;
 }
 .author {
     font-size: 1.4rem;
@@ -265,7 +272,8 @@ button[type="submit"]:active {
     opacity: 0;
     overflow: hidden;
 }
-.book:hover .book-controls {
+.book:hover .book-controls,
+.book:active .book-controls {
     opacity: 1;
     background: rgba(var(--clr-sec-dark-nums), .9);
     border-radius: .5rem;
