--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 body {
     height: 100%;
@@ -42,7 +43,7 @@ body {
 /*--HEADER START--*/
 header {
     min-height: 10rem;
-    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    padding: 1.5rem 1rem 1rem 1rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -167,11 +168,12 @@ button {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 1rem;
     z-index: 1000;
     background: rgba(0,0,0,.5);
     transition: all .2s;
@@ -180,16 +182,24 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 2rem;
     gap: 2rem;
     padding: 3rem 5rem;
-    font-size: 2rem;
     color: var(--clr-white);
     border: 1rem solid var(--clr-white);
     border-radius: .5rem;
     background: var(--clr-sec);
 }
+@media only screen and 
+(orientation: landscape) and
+(max-height: 500px) {
+    form {
+        font-size: 1.2rem;
+        gap: 1rem;
+    }
+}
 .form-heading {
-    margin-bottom: .5rem;
+    margin-bottom: .25em;
     font-family: var(--font-pri);
     font-weight: 700;
 }
@@ -204,7 +214,7 @@ form {
     font-family: var(--font-sec);
 }
 input {
-    border: .4rem solid transparent;
+    border: .2em solid transparent;
     background: var(--clr-white);
     border-radius: .2rem;
     font-family: var(--font-sec);
@@ -214,8 +224,16 @@ input:focus {
     border-color: var(--clr-pri);
 }
 .form-input {
-    padding: .5rem;
+    padding: .25em;
     font-size: 1em;
+}
+@media only screen and (orientation: landscape) {
+    .form-label {
+        font-size: 1.1em;
+    }
+    .form-input {
+        font-size: 1.3em;
+    }
 }
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
@@ -224,23 +242,18 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .form-group-horizontal {
     display: flex;
-    align-items: center;
-    gap: 1.2rem;
-}
-#page-count-group {
     justify-content: space-between;
+    align-items: center;
 }
 form input[type="checkbox"] {
     width: 1.8rem;
     height: 1.8rem;
-    margin-left: .65rem;
     border: .3rem solid var(--clr-pri);
-
 }
 button[type="submit"] {
     width: 75%;
-    margin-top: 1rem;
-    padding: 1.2rem;
+    margin-top: .5em;
+    padding: .6em;
     font-size: 1em;
     font-family: var(--font-pri);
     font-weight: 500;
@@ -288,7 +301,7 @@ button[type="submit"]:active {
     border-radius: .5rem;
     background: linear-gradient(to right, var(--clr-book-dark), var(--clr-book-light) 40%, var(--clr-book-light) 60%, var(--clr-book-dark));
     transition: 
-        background-color .1s,
+        background-color .2s,
         border .2s;
 }
 .book:hover,
@@ -303,7 +316,7 @@ button[type="submit"]:active {
 }
 .title-underline {
     width: 75%;
-    height: .7rem;
+    min-height: .7rem;
     margin: .8rem 0 1rem 0;
     border: .1rem solid var(--clr-sec-dark);
     border-left: none;
@@ -318,8 +331,9 @@ button[type="submit"]:active {
     padding: .3rem 0;
     font-size: 1.2rem;
 }
-.read {
-
+.read .title-underline {
+    border-radius: 1rem;
+    border-width: .2rem;
 }
 /*--BOOK END--*/
 
@@ -376,12 +390,20 @@ footer {
     margin: 10rem 3rem 4rem 3rem;
     font-size: 1.5rem;
     letter-spacing: .07rem;
-    color: var(--clr-sec-light);
+    color: var(--clr-white);
 }
 a {
-    color: var(--clr-sec-light);
+    display: inline-block;
+    height: 2.1rem;
+    color: var(--clr-white);
+    text-underline-offset: .3rem;
+    text-decoration: none;
+    border-bottom: .1rem solid var(--clr-white);
+    transition: height .2s;
 }
 a:hover {
-    color: var(--clr-white);
+    height: 1.9rem;
+    color: var(--clr-sec-light);
+    border-color: var(--clr-sec-light);
 }
 /*--FOOTER END--*/
